playing around with the words.txt file